[gd_scene load_steps=8 format=3 uid="uid://2fpacds3hu8n"]

[ext_resource type="Script" uid="uid://c8ypkl4nixsox" path="res://Scripts/ChallengeResultPanel.gd" id="1_8sm0m"]
[ext_resource type="Texture2D" uid="uid://bj14mm05c4i87" path="res://gui/ui_4.png" id="2_uofyk"]
[ext_resource type="FontFile" uid="uid://bdlqaeel30c00" path="res://Fonts/dyslexiafont/OpenDyslexic-Bold.otf" id="3_idjw4"]
[ext_resource type="FontFile" uid="uid://l1q8mfvbxty3" path="res://Fonts/dyslexiafont/OpenDyslexic-Regular.otf" id="4_kf8r5"]

[sub_resource type="Animation" id="Animation_2vu8j"]
resource_name = "appear"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(0.3, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_fade_out"]
resource_name = "fade_out"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.23333),
"transitions": PackedFloat32Array(1, 0.3),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rdw4p"]
_data = {
&"appear": SubResource("Animation_2vu8j"),
&"fade_out": SubResource("Animation_fade_out")
}

[node name="ChallengeResultPanels" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_8sm0m")

[node name="BackgroundOverlay" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.6)

[node name="ResultPanel" type="TextureRect" parent="."]
custom_minimum_size = Vector2(600, 500)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -338.0
offset_top = -353.0
offset_right = 262.0
offset_bottom = 351.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.997167, 1.00342)
texture = ExtResource("2_uofyk")
expand_mode = 1
stretch_mode = 5

[node name="ContentContainer" type="VBoxContainer" parent="ResultPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 19.0
offset_top = 135.0
offset_right = -21.0
offset_bottom = -142.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20
alignment = 1

[node name="TitleLabel" type="Label" parent="ResultPanel/ContentContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0.81197, 0.296865, 1)
theme_override_colors/font_shadow_color = Color(0.32549, 0.14902, 0.0196078, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_constants/shadow_outline_size = 2
theme_override_fonts/font = ExtResource("3_idjw4")
theme_override_font_sizes/font_size = 32
text = "Challenge Result"
horizontal_alignment = 1

[node name="ResultContainer" type="VBoxContainer" parent="ResultPanel/ContentContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="InputLabel" type="Label" parent="ResultPanel/ContentContainer/ResultContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.501961)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_fonts/font = ExtResource("4_kf8r5")
theme_override_font_sizes/font_size = 22
text = "You stated:"
horizontal_alignment = 1

[node name="WordLabel" type="Label" parent="ResultPanel/ContentContainer/ResultContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.501961)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_fonts/font = ExtResource("3_idjw4")
theme_override_font_sizes/font_size = 30
text = "apple"
horizontal_alignment = 1

[node name="ExpectedLabel" type="Label" parent="ResultPanel/ContentContainer/ResultContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.501961)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_fonts/font = ExtResource("4_kf8r5")
theme_override_font_sizes/font_size = 22
text = "The word was:"
horizontal_alignment = 1

[node name="TargetWordLabel" type="Label" parent="ResultPanel/ContentContainer/ResultContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.501961)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_fonts/font = ExtResource("3_idjw4")
theme_override_font_sizes/font_size = 30
text = "apple"
horizontal_alignment = 1

[node name="StatusContainer" type="VBoxContainer" parent="ResultPanel/ContentContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="StatusLabel" type="Label" parent="ResultPanel/ContentContainer/StatusContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.113725, 0.866667, 0.384314, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.501961)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_fonts/font = ExtResource("3_idjw4")
theme_override_font_sizes/font_size = 22
text = "CHALLENGE SUCCESSFUL!"
horizontal_alignment = 1

[node name="BonusDamageLabel" type="Label" parent="ResultPanel/ContentContainer/StatusContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0.762171, 0.822802, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.501961)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_fonts/font = ExtResource("4_kf8r5")
theme_override_font_sizes/font_size = 24
text = "Bonus Damage: +20"
horizontal_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_rdw4p")
}

[node name="DisplayTimer" type="Timer" parent="."]
wait_time = 3.5
one_shot = true
